# OS-4course

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
include/: data_types.h  process.h  temp_logger.h  temp_simulator.h  timer.h
src/: data_types.cpp  main.cpp  process.cpp  temp_logger.cpp  temp_simulator.cpp  timer.cpp
tests/: main.cpp
